NXP-32509: Adding indexing logic based on DEP